# HippocampalSWRDynamics

./: .gitignore  README.md  pyproject.toml
.cursor/plans/: refactor_local_scripts_to_pipeline_d3731c1b.plan.md
notebooks/: Figure1.ipynb  Figure2.ipynb
replay_structure/: config.py  external_event_adapters.py  forward_backward.py  metadata.py  model_comparison.py  ratday_preprocessing.py  read_write.py  structure_analysis_input.py  structure_trajectory.py  utils.py
replay_structure/pipelines/: __init__.py  modeling_pipeline.py  preprocessing_pipeline.py  session_pipeline.py  structure_analysis_pipeline.py
scripts/local/: Interactive-1.ipynb  generate_model_recovery_data.py  get_descriptive_stats.py  get_marginals.py  get_trajectories.py  preprocess_ratday_data.py  preprocess_spikemat_data.py  reformat_data_for_structure_analysis.py  run_all_comps_for_sess.py  run_deviance_explained.py  run_diffusion_constant.py  run_factorial_model_comparison.py  run_model.py  run_model_comparison.py  run_pf_analysis.py  run_predictive_analysis.py
scripts/o2/: o2_lib.py
tests/: test_external_event_adapters.py  test_get_spikemat.py  test_ratday_preprocessing_histograms.py
