[project]
name = "hippocampalswrdynamics"
version = "0.2.0"
description = ""
authors = [{ name = "DrugowitschLab" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy>=1.18.2,<2",
    "pandas>=1.0.3,<2",
    "scipy>=1.4.1,<2",
    "matplotlib>=3.2.1,<4",
    "torch>=1.4.0,<2",
    "notebook",
    "jupyterlab",
    "click",
    "ipython>=8.9.0,<9",
    "seaborn", # "seaborn>=0.10.1,<0.11"
    "compress-pickle>=2.0.1,<3",
    "pywinpty>=2.0.10,<2.0.14; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=5.2,<6",
    "flake8>=3.7.9,<4",
    "black==18.9b0",
    "yapf>=0.29.0,<0.30",
    "ipykernel>=5.4.3,<6",
    "mypy>=0.910,<0.920",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["replay_structure"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
